Idea inspections fixes